[gd_scene load_steps=4 format=3 uid="uid://ccndup45bwhh1"]

[ext_resource type="Script" uid="uid://c6wl8hd54lmct" path="res://scripts/player.gd" id="1_h3cwf"]
[ext_resource type="Texture2D" uid="uid://b4cmt7gb4783p" path="res://art/player.png" id="2_h3cwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3cwf"]
size = Vector2(32, 32)

[node name="character" type="CharacterBody2D"]
script = ExtResource("1_h3cwf")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_h3cwf")

[node name="camera" type="Camera2D" parent="."]
position = Vector2(29, 0)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h3cwf")

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="dashCooldown" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dashCooldown" to="." method="_on_dash_cooldown_timeout"]
